TextWithIconWidget: fix text wrapping
Prevent wrapping on the container, so that the icon and text are
positioned on the same line, with proper vertical alignment, regardless
of the text length/width. Note, the text itself is allowed to wrap.

Follow-up to I91c1e01205b93c5.

Bug: T392618

--- a/resources/ext.campaignEvents.TextWithIconWidget.less
+++ b/resources/ext.campaignEvents.TextWithIconWidget.less
@@ -6,6 +6,9 @@
 	// would result in content overflow bugs when trying to set a maximum height on the Special:AllEvents content, for
 	// example when the page is transcluded.
 	position: relative;
+	// Prevent wrapping by default, so that the icon and the text will be on the same line. The content (text) itself
+	// is allowed to wrap below. See T392618.
+	white-space: nowrap;
 
 	/* Start list of icon classes. Ideally we shouldn't need to do this. T388458 */
 	/* stylelint-disable rule-empty-line-before */
@@ -85,5 +88,7 @@
 		display: inline-block;
 		vertical-align: top;
 		margin-left: @spacing-50;
+		// Undo the `nowrap` set on the container.
+		white-space: wrap;
 	}
 }
